# CNum

./: .gitmodules  CMakeLists.txt  README.md  gen_VS2015.bat  gen_Xcode.sh  gen_eclipse.sh
include/: Counter.hpp  N.hpp  counter.hpp
src/: CMakeLists.txt  Counter.cpp  N.cpp  counter.cpp  main.cpp
src/CNum/: type.cpp  type.hpp
test/: CMakeLists.txt  cnum_test.cpp
test/CNum/: counter_test.cpp  type_test.cpp
